Add scoped Notion continuity queries to Backstage Booker (#1451)
